--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   mobx_codegen: ^2.3.0
   percent_indicator: ^4.2.3
   shared_preferences: ^2.2.0
+  awesome_dialog: ^3.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
